linkerd/viz/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mesh.rohitpotato.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkerd-viz
                port:
                  number: 8084
